Upgrade to virutal threads for system with enough memory/CPU